# qftp

./: CLAUDE.md  Cargo.toml  README.md
crates/qftp-client/: Cargo.toml
crates/qftp-client/src/: main.rs  repl.rs
crates/qftp-common/: Cargo.toml
crates/qftp-common/src/: protocol.rs  transport.rs
crates/qftp-server/: Cargo.toml
crates/qftp-server/src/: handler.rs  main.rs
