[package]
name = "qftp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
qftp-common = { path = "../qftp-common" }
quiche = "0.22"
rcgen = "0.13"
mio = { version = "1", features = ["net", "os-poll"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
ring = "0.17"
